Add/fix support for usage as library. Protect headers from C++ name mangling.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,28 @@
 cmake_minimum_required(VERSION 2.6)
 project(gpx)
 
-set(SOURCES getopt.c gpx.c ini.c)
-set(HEADERS getopt.h gpx.h ini.h)
+option(BUILD_AS_LIBRARY "build a static library instead of an executable" OFF)
 
-add_executable(gpx ${SOURCES} ${HEADERS})
+set(SOURCES gpx.c)
+set(HEADERS gpx.h)
 
-install(TARGETS gpx RUNTIME DESTINATION bin)
+if(WIN32)
+	set(SOURCES ${SOURCES} getopt.c)
+	set(HEADERS ${HEADERS} getopt.h)
+endif(WIN32)
+
+if(BUILD_AS_LIBRARY)
+
+	set(HEADERS ${HEADERS} libgpx.h)
+	add_library(gpx ${SOURCES} ${HEADERS})
+	set_target_properties(gpx PROPERTIES COMPILE_FLAGS "-DBUILD_AS_LIBRARY")
+
+else(BUILD_AS_LIBRARY)
+
+	set(SOURCES ${SOURCES} ini.c)
+	set(HEADERS ${HEADERS} ini.h)
+
+	add_executable(gpx ${SOURCES} ${HEADERS})
+	install(TARGETS gpx RUNTIME DESTINATION bin)
+
+endif(BUILD_AS_LIBRARY)
